--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,16 @@
 * {
-  box-sizing: border-box;
+   padding: 0;
+   margin: 0;
+   box-sizing: border-box;
 }
 
 html {
-  font-family: sans-serif;
+   font-family: sans-serif;
 }
 
 body {
-  margin: 0;
+   margin-top: 3rem;
+   background-color: #333;
+   height: 100vh;
+   overflow: hidden;
 }
