--- a/src/components/UI/Modal/Modal.module.css
+++ b/src/components/UI/Modal/Modal.module.css
@@ -13,12 +13,16 @@
    align-items: center;
    pointer-events: all;
 }
-.modal-content {
+.modal-content-container {
    width: 70%;
    background-color: #fff;
+   border-radius: 10px;
+   position: relative;
+}
+.modal-content {
+   width: 100%;
    display: flex;
    flex-direction: column;
-   border-radius: 10px;
 }
 .modal-title {
    background: #580a3e;
@@ -33,6 +37,7 @@
    text-transform: uppercase;
 }
 .modal-btn {
-   margin: 1rem;
-   align-self: end;
+   position: absolute;
+   right: 1rem;
+   bottom: 1rem;
 }
